--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SOEN - Prueba Básica</title>
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="./src/styles.css">
+    <script src="./src/app.js"></script>
 </head>
 <body>
-    <main class="qa-red">
+    <main id="content" class="qa-red">
         <div class="c-atom js-cont-atom qa-red">
             <div class="c-atom__nucleus"></div>
             <div class="c-atom__orbit">
